# emplace

./: .all-contributorsrc  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  appveyor.yml  snapcraft.yaml
.github/: release-drafter.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  new-package-manager.md  new-shell.md
.github/workflows/: bloat.yml  release-drafter.yml  release.yml  rust.yml
ci/: before_deploy.ps1  before_deploy.sh  script.sh
src/: authentication.rs  catch.rs  clean.rs  command.rs  config.rs  git.rs  history.rs  init.rs  install.rs  link.rs  main.rs  migrate.rs  package.rs  package_manager_impl.rs  repo.rs
src/package_manager/: apt.rs  brew.rs  cargo.rs  cargo_binstall.rs  chocolatey.rs  dnf.rs  gem.rs  go.rs  guix.rs  mod.rs  nix.rs  npm.rs  pacman.rs  paru.rs  pip.rs  pip3.rs  pkg.rs  rua.rs  rustup.rs  scoop.rs  snap.rs  test_macro.rs  yay.rs  zypper.rs
