[package]
name = "emplace"
version = "1.4.2"
authors = ["Thomas Versteeg <thomas@versteeg.email>"]
description = "Command-line tool to mirror installed software on multiple machines."
edition = "2018"
repository = "https://github.com/tversteeg/emplace"
readme = "README.md"
license = "AGPL-3.0-or-later"
keywords = ["shell", "cli", "mirror", "sync"]
categories = ["command-line-utilities"]
include = ["src/**/*", "LICENSE", "README.md"]

[badges]
is-it-maintained-issue-resolution = { repository = "tversteeg/emplace" }
is-it-maintained-open-issues = { repository = "tversteeg/emplace" }

[dependencies]
anyhow = { version = "1.0.56", features = ["backtrace"] }
bugreport = "0.5.0"
clap = { version = "3.1.8", features = ["env", "cargo"] }
clap_generate = "3.0.3"
colored = "2.0.0"
console = "0.15.0"
dialoguer = "0.10.0"
dirs = "4.0.0"
enum_dispatch = "0.3.8"
itertools = "0.10.3"
log = "0.4.16"
ron = "0.7.0"
run_script = "0.9.0"
serde = { version = "1.0.136", features = ["derive"] }
simplelog = "0.11.2"
strum = "0.23.0"
strum_macros = "0.24.0"
toml = "0.5.8"

[dev-dependencies]
indoc = "1.0.4"
cargo-husky = { version = "1.5.0", features = ["precommit-hook", "run-cargo-check", "run-cargo-clippy", "run-cargo-fmt"] }

[package.metadata.deb]
maintainer = "Thomas Versteeg <thomas@versteeg.email>"
copyright = "2019, Thomas Versteeg <thomas@versteeg.email>"
license-file = ["LICENSE", "4"]
extended-description = """\
A command-line tool to mirror installed software on multiple machines. \
Hooks into your shell to keep track of what you are installing. \
Can also be used to sync configuration files. \
"""
depends = "$auto, git"
section = "utility"
priority = "optional"
assets = [
	["target/release/emplace", "usr/bin/", "755"],
	["README.md", "usr/share/doc/emplace/README", "644"],
]
