[package]
name = "emplace"
version = "1.4.2"
authors = ["Thomas Versteeg <thomas@versteeg.email>"]
description = "Command-line tool to mirror installed software on multiple machines."
edition = "2018"
repository = "https://github.com/tversteeg/emplace"
readme = "README.md"
license = "AGPL-3.0-or-later"
keywords = ["shell", "cli", "mirror", "sync"]
categories = ["command-line-utilities"]
include = ["src/**/*", "LICENSE", "README.md"]

[badges]
is-it-maintained-issue-resolution = { repository = "tversteeg/emplace" }
is-it-maintained-open-issues = { repository = "tversteeg/emplace" }

[dependencies]
anyhow = { version = "1.0.61", features = ["backtrace"] }
bugreport = "0.5.0"
clap = { version = "3.2.21", features = ["env", "cargo"] }
clap_complete = "3.2.4"
colored = "2.0.0"
console = "0.15.1"
dialoguer = "0.10.2"
dirs = "4.0.0"
enum_dispatch = "0.3.8"
itertools = "0.10.3"
log = "0.4.17"
ron = "0.7.1"
run_script = "0.10.0"
serde = { version = "1.0.143", features = ["derive"] }
simplelog = "0.12.0"
strum = "0.24.1"
strum_macros = "0.24.3"
toml = "0.5.9"

[dev-dependencies]
indoc = "1.0.7"
cargo-husky = { version = "1.5.0", features = ["precommit-hook", "run-cargo-check", "run-cargo-clippy", "run-cargo-fmt"] }

[package.metadata.deb]
maintainer = "Thomas Versteeg <thomas@versteeg.email>"
copyright = "2019, Thomas Versteeg <thomas@versteeg.email>"
license-file = ["LICENSE", "4"]
extended-description = """\
A command-line tool to mirror installed software on multiple machines. \
Hooks into your shell to keep track of what you are installing. \
Can also be used to sync configuration files. \
"""
depends = "$auto, git"
section = "utility"
priority = "optional"
assets = [
	["target/release/emplace", "usr/bin/", "755"],
	["README.md", "usr/share/doc/emplace/README", "644"],
]
