[package]
name = "emplace"
version = "1.6.0"
authors = ["Thomas Versteeg <thomas@versteeg.email>"]
description = "Command-line tool to mirror installed software on multiple machines."
edition = "2018"
repository = "https://github.com/tversteeg/emplace"
readme = "README.md"
license = "AGPL-3.0-or-later"
keywords = ["shell", "cli", "mirror", "sync"]
categories = ["command-line-utilities"]
include = ["src/**/*", "LICENSE", "README.md"]

[badges]
is-it-maintained-issue-resolution = { repository = "tversteeg/emplace" }
is-it-maintained-open-issues = { repository = "tversteeg/emplace" }

[dependencies]
anyhow = { version = "1.0.82", features = ["backtrace"] }
bugreport = { version = "0.5.0", default-features = false, features = ["git_hash", "format_markdown"] }
camino = "1.1.6"
clap = { version = "4.5.4", features = ["env", "cargo"] }
clap_complete = "4.5.2"
colored = "3.0.0"
console = "0.15.8"
dialoguer = "0.11.0"
dirs = "6.0.0"
enum_dispatch = "0.3.13"
itertools = "0.14.0"
log = "0.4.21"
ron = "0.8.1"
run_script = "0.11.0"
serde = { version = "1.0.200", features = ["derive"] }
simplelog = "0.12.2"
strum = "0.27.0"
strum_macros = "0.27.0"
toml = "0.8.12"

[dev-dependencies]
indoc = "2.0.5"
cargo-husky = { version = "1.5.0", features = ["precommit-hook", "run-cargo-check", "run-cargo-clippy", "run-cargo-fmt"] }

[package.metadata.deb]
maintainer = "Thomas Versteeg <thomas@versteeg.email>"
copyright = "2019, Thomas Versteeg <thomas@versteeg.email>"
license-file = ["LICENSE", "4"]
extended-description = """\
A command-line tool to mirror installed software on multiple machines. \
Hooks into your shell to keep track of what you are installing. \
Can also be used to sync configuration files. \
"""
depends = "$auto, git"
section = "utility"
priority = "optional"
assets = [
	["target/release/emplace", "usr/bin/", "755"],
	["README.md", "usr/share/doc/emplace/README", "644"],
]

[profile.release]
lto = true
